@@ -1,6 +1,8 @@
 v0.9.10, xxxxx
 Stability update for v0.9.9
 
+* Preserve history in FITS file when former history exists
+* Improved ECC alignment algorithm
 * New external command stream option
 * Preview for color saturation, asinh mapping, histogram transform and wavelets
 * Preserve FITS keywords in sum stacked image
